fix overflow

--- a/task1/style.css
+++ b/task1/style.css
@@ -35,7 +35,8 @@ header > span.search {
 .top,
 .bottom {
     z-index: 2;
-    transition: all 0.5s ease;
+    transition: height 0.5s ease;
+    overflow: hidden;
 }
 
 header {
@@ -134,7 +135,7 @@ ul > li {
 }
 
 .hidden {
-    opacity: 0;
+    height: 0;
 }
 
 .li-main{
